# wildfire_modeling

./: .gitignore  README.md  environment.yml  random.md  requirements.txt  setup.py
data/: gfa_spatial_static_by_biome.pkl  gfa_spatial_time_varying_grasslands_lognormal.pkl  gfa_spatial_time_varying_savannas_tpl.pkl  gfa_spatial_time_varying_shrublands_lognormal.pkl  gfa_static_fits_by_biome_2003_2016.pkl  idaho_static_fits_by_biome_2003_2016.pkl  mtbs_static_fits_by_biome.pkl  mtbs_static_fits_by_biome_2003_2016.pkl  mtbs_static_fits_by_biome_no_savanna.pkl  mtbs_static_fits_by_biome_refined.pkl  mtbs_time_varying_fits_by_biome.pkl  overall_results_evtname.pkl
notebooks/: 1_dataset_comparison.ipynb  2_fitting_routine.ipynb  3_land_cover_classification.ipynb  4_land_cover_segmentation.ipynb  5_temporal_analysis.ipynb  7_evt_classifier.ipynb
utils/: dataset_comparison.py  landcover_segmentation.py  spatial_analysis.py  temporal_analysis.py
utils/wildfire_powerlaw/: powerlaw.py  pyproject.toml  setup.py
